--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.6",
+    "clsx": "^2.1.1",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
