--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "prebuild": "node scripts/fetch-github-stats.js && node scripts/fetch-npm-stats.js",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "fetch-stats": "node scripts/fetch-github-stats.js",
+    "fetch-npm": "node scripts/fetch-npm-stats.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.6",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
